<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:padding="20dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="40sp"
        android:id="@+id/textView3"
        android:gravity="center|top"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_event"
        android:id="@+id/searchButton"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="172dp"
        android:onClick="createEvent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_events"
        android:id="@+id/createButton"
        android:textSize="30sp"
        android:layout_alignTop="@+id/searchButton"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:onClick="searchEvents"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/event_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/createButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbars="vertical">


    </android.support.v7.widget.RecyclerView>

</RelativeLayout>



